# snitch

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  codecov.yml  make_snitch_all.py  meson.build  meson_options.txt  snatch.sublime-project  snitch.sublime-project
.github/workflows/: cmake.yml  meson.yml  release.yml
cmake/: Findsnatch.cmake  Findsnitch.cmake  snatch-config.cmake.in  snitch-config.cmake.in
doc/: coding_guidelines.md  comparison_catch2.md  testing_snitch.md
doc/vcpkg-example/: CMakeLists.txt  README.md  main.cpp
docker/: Dockerfile.conan-center
include/: snatch.hpp
include/snatch/: snatch.hpp  snatch_config.hpp.config  snatch_teamcity.hpp
include/snitch/: snitch.hpp  snitch_any.hpp  snitch_append.hpp  snitch_capture.hpp  snitch_catch2_xml.hpp  snitch_cli.hpp  snitch_concepts.hpp  snitch_config.hpp.config  snitch_console.hpp  snitch_error_handling.hpp  snitch_expression.hpp  snitch_file.hpp  snitch_fixed_point.hpp  snitch_function.hpp  snitch_macros_check.hpp  snitch_macros_check_base.hpp  snitch_macros_consteval.hpp  snitch_macros_constexpr.hpp  snitch_macros_exceptions.hpp  snitch_macros_misc.hpp  snitch_macros_reporter.hpp  snitch_macros_test_case.hpp  snitch_macros_utility.hpp  snitch_macros_warnings.hpp  snitch_main.hpp  snitch_matcher.hpp  snitch_registry.hpp  snitch_reporter_catch2_xml.hpp  snitch_reporter_console.hpp  snitch_reporter_teamcity.hpp  snitch_section.hpp  snitch_string.hpp  snitch_string_utility.hpp  snitch_teamcity.hpp  snitch_test_data.hpp  snitch_time.hpp  snitch_type_id.hpp  snitch_type_name.hpp  snitch_vector.hpp
snitch/: meson.build
src/: snatch.cpp  snitch.cpp  snitch_any.cpp  snitch_append.cpp  snitch_capture.cpp  snitch_catch2_xml.cpp  snitch_cli.cpp  snitch_console.cpp  snitch_error_handling.cpp  snitch_file.cpp  snitch_main.cpp  snitch_matcher.cpp  snitch_registry.cpp  snitch_reporter_catch2_xml.cpp  snitch_reporter_console.cpp  snitch_reporter_teamcity.cpp  snitch_reporters.cpp  snitch_section.cpp  snitch_string_utility.cpp  snitch_teamcity.cpp  snitch_test_data.cpp  snitch_time.cpp
tests/: CMakeLists.txt  runtime_tests_small_string.cpp  runtime_tests_small_vector.cpp  runtime_tests_type_name.cpp  testing.cpp  testing.hpp  testing_assertions.hpp  testing_event.cpp  testing_event.hpp  testing_reporters.cpp  testing_reporters.hpp
tests/approval_tests/: README.md  reporter_catch2_xml.cpp  reporter_console.cpp  reporter_teamcity.cpp
tests/approval_tests/data/expected/: reporter_catch2_xml_allfail  reporter_catch2_xml_allpass  reporter_catch2_xml_default  reporter_catch2_xml_full  reporter_catch2_xml_list_tests  reporter_catch2_xml_notest  reporter_console_allfail  reporter_console_allpass  reporter_console_default  reporter_console_full  reporter_console_list_tests  reporter_console_notest  reporter_console_withcolor  reporter_teamcity_allfail  reporter_teamcity_allpass  reporter_teamcity_default  reporter_teamcity_full  reporter_teamcity_list_tests  reporter_teamcity_notest
tests/install_tests/: CMakeLists.txt  standalone.cpp
tests/runtime_tests/: any.cpp  append.cpp  capture.cpp  check.cpp  cli.cpp  function_ref.cpp  macros.cpp  matchers.cpp  registry.cpp  regressions.cpp  section.cpp  skip.cpp  small_function.cpp  small_string.cpp  small_vector.cpp  string_utility.cpp  type_id.cpp  type_name.cpp
vcpkg-example/: CMakeLists.txt  README.md  vcpkg.json
