option('max_test_cases'             ,type: 'integer' ,value: 5000, description : 'Maximum number of test cases in a test application.')
option('max_nested_sections'        ,type: 'integer' ,value: 8   , description : 'Maximum depth of nested sections in a test case.')
option('max_expr_length'            ,type: 'integer' ,value: 1024, description : 'Maximum length of a printed expression when reporting failure.')
option('max_message_length'         ,type: 'integer' ,value: 1024, description : 'Maximum length of error or status messages.')
option('max_test_name_length'       ,type: 'integer' ,value: 1024, description : 'Maximum length of a test case name.')
option('max_tag_length'             ,type: 'integer' ,value: 256 , description : 'Maximum length of a test tag.')
option('max_captures'               ,type: 'integer' ,value: 8   , description : 'Maximum number of captured expressions in a test case.')
option('max_capture_length'         ,type: 'integer' ,value: 256 , description : 'Maximum length of a captured expression.')
option('max_unique_tags'            ,type: 'integer' ,value: 1024, description : 'Maximum number of unique tags in a test application.')
option('max_command_line_args'      ,type: 'integer' ,value: 1024, description : 'Maximum number of command line arguments to a test application.')

option('define_main'                ,type: 'boolean' ,value: true, description : 'Define main() in snitch -- disable to provide your own main() function.')
option('with_exceptions'            ,type: 'boolean' ,value: true, description : 'Use exceptions in snitch implementation -- will be forced OFF if exceptions are not available.')
option('with_timings'               ,type: 'boolean' ,value: true, description : 'Measure the time taken by each test case -- disable to speed up tests.')
option('with_shorthand_macros'      ,type: 'boolean' ,value: true, description : 'Use short names for test macros -- disable if this causes conflicts.')
option('constexpr_float_use_bicast' ,type: 'boolean', value: true, description : 'Use std::bit_cast if available to implement exact constexpr float-to-string conversion.')
option('default_with_color'         ,type: 'boolean' ,value: true, description : 'Enable terminal colors by default -- can also be controlled by command line interface.')
option('create_header_only'         ,type: 'boolean' ,value: true, description : 'Create a single-header header-only version of snitch.')
option('create_library'             ,type: 'boolean' ,value: true, description : 'Build a compiled library version of snitch.')
